crates/core/tests/snapshots/smart_rename_rule__value_position_does_not_rename_to_reserved_keyword.snap
---
source: crates/core/tests/smart_rename_rule.rs
expression: output
---
import r from "./m.js";
export default {
    default: r
};
