crates/core/tests/snapshots/smart_rename_rule__value_position_rename_must_not_capture_param_referenced_in_body.snap
---
source: crates/core/tests/smart_rename_rule.rs
expression: output
---
function make(count) {
    const count_1 = count + 1;
    return {
        count: count_1
    };
}
use(make);
