crates/core/tests/snapshots/smart_rename_rule__value_position_skips_computed_key.snap
---
source: crates/core/tests/smart_rename_rule.rs
expression: output
---
import r from "./m.js";
const k = "Foo";
export default {
    [k]: r
};
