crates/core/tests/snapshots/smart_rename_rule__value_position_skips_shadowed_use.snap
---
source: crates/core/tests/smart_rename_rule.rs
expression: output
---
const count = 1;
const obj = {
    count
};
function inner(t) {
    return t + 1;
}
use(obj, inner(2));
