crates/core/tests/snapshots/smart_rename_rule__value_position_suffix_does_not_steal_natural_target.snap
---
source: crates/core/tests/smart_rename_rule.rs
expression: output
---
const error = "taken";
const f = (error_2, error_1)=>({
        error: error_2,
        error_1
    });
use(error);
