crates/core/tests/snapshots/smart_rename_rule__value_position_uses_suffix_when_target_is_existing_binding.snap
---
source: crates/core/tests/smart_rename_rule.rs
expression: output
---
const error = "taken";
const f = (error_1)=>({
        error: error_1
    });
use(error);
