crates/core/tests/snapshots/smart_rename_rule__value_position_uses_suffix_when_target_would_shadow_use.snap
---
source: crates/core/tests/smart_rename_rule.rs
expression: output
---
const sideCar_1 = makeSideCar();
function render(U) {
    const { sideCar } = U;
    return {
        sideCar: sideCar_1
    };
}
